--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.84.0",
     "@syncfusion/ej2-base": "^31.2.5",
     "@syncfusion/ej2-react-schedule": "^31.2.3",
     "next": "15.5.4",
