--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.84.0",
-    "@syncfusion/ej2-base": "^31.2.5",
+    "@syncfusion/ej2-base": "^31.2.12",
+    "@syncfusion/ej2-data": "^31.2.16",
+    "@syncfusion/ej2-react-dropdowns": "^31.2.16",
+    "@syncfusion/ej2-react-grids": "^31.2.16",
+    "@syncfusion/ej2-react-inputs": "^31.2.15",
     "@syncfusion/ej2-react-schedule": "^31.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
