--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@supabase/supabase-js": "^2.84.0",
     "@syncfusion/ej2-base": "^31.2.12",
     "@syncfusion/ej2-data": "^31.2.16",
+    "@syncfusion/ej2-react-calendars": "^32.1.25",
     "@syncfusion/ej2-react-dropdowns": "^31.2.16",
     "@syncfusion/ej2-react-grids": "^31.2.16",
     "@syncfusion/ej2-react-inputs": "^31.2.15",
     "@syncfusion/ej2-react-navigations": "^32.1.19",
     "@syncfusion/ej2-react-schedule": "^31.2.3",
+    "@tanstack/react-query": "^5.90.20",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
