--- a/package.json
+++ b/package.json
@@ -27,19 +27,22 @@
     "@supabase/supabase-js": "^2.84.0",
     "@syncfusion/ej2-base": "^31.2.12",
     "@syncfusion/ej2-data": "^31.2.16",
-    "@syncfusion/ej2-react-calendars": "^32.1.25",
+    "@syncfusion/ej2-react-calendars": "^31.2.0",
     "@syncfusion/ej2-react-dropdowns": "^31.2.16",
     "@syncfusion/ej2-react-grids": "^31.2.16",
     "@syncfusion/ej2-react-inputs": "^31.2.15",
-    "@syncfusion/ej2-react-navigations": "^32.1.19",
+    "@syncfusion/ej2-react-navigations": "^31.2.0",
     "@syncfusion/ej2-react-schedule": "^31.2.3",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-query-devtools": "^5.91.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.6",
     "lucide-react": "^0.554.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sonner": "^2.0.7",
