--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@tanstack/react-query-devtools": "^5.91.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "echarts": "^6.0.0",
     "echarts-for-react": "^3.0.6",
     "lucide-react": "^0.554.0",
@@ -45,6 +47,7 @@
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.1.0",
+    "react-day-picker": "^9.13.2",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.71.1",
     "sonner": "^2.0.7",
