--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@syncfusion/ej2-react-schedule": "^31.2.3",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-query-devtools": "^5.91.3",
+    "@vis.gl/react-google-maps": "^1.7.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
